# 9seki

./: .gitignore  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
.github/workflows/: daily-pipeline.yml  seed-players.yml
db/: schema.sql
docs/: style-guide.md
scripts/pipeline/: .env.example  README.md  pyproject.toml
scripts/pipeline/data/: players.json
scripts/pipeline/pipeline/: __main__.py  clients.py  commands.py  config.py  statcast.py
scripts/writing/: .env.example  README.md  pyproject.toml
scripts/writing/writing/: __main__.py  analyze.py  commands.py  config.py  data.py  notify.py  prompts.py  write.py
src/: content.config.ts
src/components/: LevelToggle.astro
src/components/article/: Advanced.astro  Metric.astro  Rewrite.astro  StatCard.astro
src/components/charts/: HBarChart.astro
src/content/articles/: imanaga-splitter-2026-04-15.mdx  murakami-rookie-start-2026-04-18.mdx  okamoto-rookie-contact-2026-04-18.mdx  yamamoto-splitter-2026.mdx
src/content/articles/drafts/: shota-imanaga-huosimutokatutohorunoshi-ifen-ke-2026-04-15.mdx
src/content/metrics/: barrel-rate.mdx  csw-rate.mdx  hard-hit-rate.mdx  ivb.mdx  stuff-plus.mdx  whiff-rate.mdx  xwoba.mdx
src/layouts/: BaseLayout.astro
src/lib/: api.ts
src/pages/: index.astro
src/pages/articles/: [...slug].astro
src/pages/metrics/: [...slug].astro
src/pages/players/: [slug].astro  index.astro
workers/: index.ts  tsconfig.json  wrangler.toml
